--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,18 @@
 asgiref==3.10.0
+certifi==2025.10.5
+charset-normalizer==3.4.4
+cloudinary==1.44.1
 Django==5.2.7
+django-cloudinary-storage==0.3.0
 djangorestframework==3.16.1
 djangorestframework_simplejwt==5.5.1
+exponent_server_sdk==2.2.0
+idna==3.11
 pillow==12.0.0
 PyJWT==2.10.1
+requests==2.32.5
+six==1.17.0
 sqlparse==0.5.3
 typing_extensions==4.15.0
 tzdata==2025.2
+urllib3==2.5.0
